version bump to java 21 LTS (#94)
* Version bump for Gradle and Java

Build changes:
- updated build syntax to work with gradle 8+
- rebuild the gradle wrapper

Dependencies:
- added the guice dependency where appropriate
- bumped guice version
- bumped mockito version

* Getting root report to work again

* intermediate commit for the version bump for opt4j
currently all version changes marked in the corresponding issue are done
additionally the jacoco aggregate root report is now used for test coverage report
java 21 is now set as minimal required java version

* change github action to java 21

* introduced new global variables in main gradle build file for setting the correct dependency version for the required libraries

* overwork of most warnings for deprecations

* Update gh-release-assets.yml

Java 21

* Update gh-pages.yml

Java 21

* Update build.gradle

Link Java API and Guice API to Javadoc depending on the used versions automatically.

* removed unnecessary dependencies in main gradle build file

* changed jdk version used by jitpack to 21

* test api gradle dependencies

* changed sat4J version back to 2.3.5 because with version 2.3.6 there are problems with communication variables in constraints

* changes for sat4J version 2.3.5

* Website fixes: Java version, removed links to deprecated other frameworks, fixed Javadoc links in tutorial

---------

Co-authored-by: Lukas Pfeifer <lukas.pfeifer@uni-ulm.de>
Co-authored-by: Michael Glass <michael.glass@uni-ulm.de>