@@ -23,6 +23,7 @@
 
 package org.opt4j.core.genotype;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Random;
 
@@ -62,10 +63,18 @@ public class BooleanGenotype extends ArrayList<Boolean> implements ListGenotype<
 	@SuppressWarnings("unchecked")
 	public <G extends Genotype> G newInstance() {
 		try {
-			return (G) this.getClass().newInstance();
+			return (G) this.getClass().getDeclaredConstructor().newInstance();
 		} catch (InstantiationException e) {
 			throw new RuntimeException(e);
 		} catch (IllegalAccessException e) {
+			throw new RuntimeException(e);
+		} catch (IllegalArgumentException e) {
+			throw new RuntimeException(e);
+		} catch (InvocationTargetException e) {
+			throw new RuntimeException(e);
+		} catch (NoSuchMethodException e) {
+			throw new RuntimeException(e);
+		} catch (SecurityException e) {
 			throw new RuntimeException(e);
 		}
 	}
